# pico-286

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  CMakeLists.txt  LICENSE  NETWORK_REDIRECTOR_DOCUMENTATION.md  PORT_DOCUMENTATION.md  README.md  VIDEO_MODES.md  build_all_firmwares.sh  fruitjam-build.sh  fruitjam_cflags.h  fsr.asm  fsr.com  memmap.ld  memmap12.ld  merge_firmwares.sh
.github/workflows/: build.yaml
build-rp2040/: CMakeCache.txt
drivers/audio/: audio.c  audio.h
drivers/cpu/: 386.c  386_common.c  386_dynarec.c  386_ops.h  808x.c  CMakeLists.txt  cpu.c  cpu.h  cpu_table.c  fpu.c  mem.c  mmu_2386.c  nmi.c  smram.c  x86.c  x86_ops.h  x86_ops_misc.h  x86_ops_mmx.c  x86seg.c  x86seg.h  x86seg_common.c  x87.c  x87_timings.c
drivers/graphics/: graphics.h
drivers/hdmi/: hdmi.c  hdmi.h
drivers/ntsc-tv/: CMakeLists.txt  graphics.c  graphics.h
drivers/psram/: psram_spi.c  psram_spi.h
drivers/st7789/: st7789.c
drivers/tv-software/: tv-software.c
drivers/usbhid/: CMakeLists.txt  hid_app.c  hid_app.h
drivers/vga-nextgen/: vga.c
hostfs/: README.md
src/: LinuxMiniFB.c  WinMiniFB.c  linux-audio.c  linux-audio.h  linux-main.cpp  pico-main.c  tusb_config.h  win32-audio.cpp  win32-audio.h  win32-main.cpp
src/74hc595/: 74hc595.h
src/emulator/: cpu.c  cpu.c.bak  cpu.h  disks-rp2350.c.inl  disks-win32.c.inl  ems.c.inl  emulator.h  fpu.c  fpu.h  hostfs.c  hostfs.h  i8237.c.inl  i8253.c  i8259.c  mem386.c  memory.c  mouse.c  network-redirector-rp2350.c.inl  network-redirector.c.inl  ports.c  redirector.c.inl  (+3 more)
tools/: mapdrive.asm  mapdrive.com
(+19 files in other folders)
